--- a/src/index.css
+++ b/src/index.css
@@ -75,4 +75,13 @@
       animation-timing-function: linear;
       animation-fill-mode: forwards;
    }
+   .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+  }
 }
